# prysm

./: .codacy.yaml  .coveragerc  .gitattributes  .gitignore  .pydocstyle  .readthedocs.yaml  .travis.yml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  readthedocs-env.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  sloccounts.csv  test_diff_raytrace.py
.circleci/: config.yml  environment.yml  req.txt
.github/workflows/: publish.yml
Examples/: Diffraction-limited PSF and MTF.ipynb  Estimating Effective Pixel Aperture.ipynb  MTF vs Code V.ipynb  PSFs.ipynb  Pupils.ipynb  System MTF modeling.ipynb  Thin Lens Models.ipynb  Zernikes.ipynb
Examples/Estimating Effective Pixel Aperture_files/: MTFMapperParser.py  edge_sfr_values_r.txt
Examples/LensRentals Blog/Lens Performance for High Res Video and Stills/: Video.ipynb
Performance/: FFTs.ipynb  Numpy vs Numba vs Dask vs IPyParallel.ipynb  Pupils.ipynb
docs/: Makefile  make.bat  requirements.txt  rtd_env.yml
docs/source/: conf.py  contributing.rst  index.rst  modules.rst  prysm.rst
docs/source/01 - foundations college/: 101 - how prysm works.ipynb  102 - coordinates, grids, and units.ipynb  103 - richdata, plotting, and io basics.ipynb  104 - backends and precision.ipynb  index.rst
docs/source/02 - polynomials college/: 101 - zernikes on a circle.ipynb  102 - orthogonalizing over annular and arbitrary apertures.ipynb  103 - the other bases.ipynb  104 - forbes q polynomials and clenshaw sums.ipynb  201 - analytic derivatives and where they pay off.ipynb
docs/source/03 - diffraction and physical optics college/: 101 - a first diffraction model.ipynb  102 - pupils, apertures, and the psf.ipynb  103 - fixed-sampling dft propagation.ipynb
docs/source/How-tos/: Notable-Telescope-Apertures.ipynb  Polychromatic Propagation.ipynb
docs/source/api/: base_classes.rst  bayer.rst  conf.rst  convolution.rst  coordinates.rst  degredations.rst  detector.rst  fttools.rst  geometry.rst  index.rst  interferogram.rst  io.rst  jacobi.rst  mathops.rst  mtf_utils.rst  objects.rst  otf.rst  plotting.rst  polynomials.rst  propagation.rst  psf.rst  pupil.rst  qpoly.rst  refractive.rst  sample_data.rst  segmented.rst  thinfilm.rst  thinlens.rst  util.rst  wavelengths.rst  zernike.rst
docs/source/examples/: Analysis of Interferometric Wavefront Data.ipynb  Defocus and Contrast Inversion.ipynb  Diffraction Limited PSF and MTF.ipynb  Image-Based Wavefront Sensing.ipynb  Numerically Calculated Aberration Transfer Function.ipynb  Onion Ring Bokeh.ipynb  Split Transform Method.ipynb  System Model.ipynb  index.rst  interferometric_wavefront_analysis.rst  split_transform_method.rst  system_model.rst
docs/source/explanation/: Deformable Mirrors.ipynb  How prysm works.ipynb  Ins and Outs of Polynomials.ipynb  Ins-and-Outs-of-Polynomials.ipynb  Segmented Systems.ipynb  how prysm works.ipynb  how-prysm-works.ipynb  index.rst  sign-and-direction-conventions.ipynb
docs/source/how-tos/: Advanced Interferogram Processing.ipynb  Advanced Optimization with Problem and Governors.ipynb  Advanced-Interferogram-Processing.ipynb  Differentiable Optical Models.ipynb  Differentiable-Optical-Models.ipynb  GPU and Exascale Computing.ipynb  Notable Telescope Apertures.ipynb  Notable-Telescope-Apertures.ipynb  Polarized Propagation.ipynb  Polychromatic Propagation.ipynb  index.rst  (+3 more)
paper/: paper.bib  paper.md  references.bib
prysm/: __init__.py  _basicdata.py  _phase.py  _richdata.py  _zernike.py  bayer.py  colorimetry.py  conf.py  convolution.py  coordinates.py  degredations.py  detector.py  extras.py  fringezernike.py  fttools.py  geometry.py  interferogram.py  io.py  jacobi.py  lens.py  macros.py  mathops.py  mtf_utils.py  objects.py  otf.py  plotting.py  propagation.py  psf.py  pupil.py  qpoly.py  refractive.py  sample_data.py  segmented.py  seidel.py  shackhartmann.py  standardzernike.py  surfacefinish.py  thinfilm.py  thinlens.py  units.py  (+5 more)
prysm/color_data/: cie_A_300_830_1nm.csv  cie_B_380_770_5nm.csv  cie_C_380_780_5nm.csv  cie_Dseries_380_780_5nm.csv  cie_E_380_780_5nm.csv  cie_Fseries_380_730_5nm.csv  cie_HPseries_380_780_5nm.csv  cie_xyz_1931_2deg_tristimulus_1nm.csv  cie_xyz_1931_2deg_tristimulus_5nm.csv  cie_xyz_1964_10deg_tristimulus_5nm.csv  robertson_cct.csv
prysm/experimental/: dm.py  pdi.py  polarization.py  psi.py  radiometry.py  srm.py  test_polarization.py
prysm/polynomials/: __init__.py  _bessel_coeffs.py  _clenshaw.py  bessel.py  cheby.py  dickson.py  hermite.py  jacobi.py  laguerre.py  legendre.py  qpoly.py  xy.py  zernike.py
prysm/propagation/: __init__.py  _kernels.py  angular_spectrum.py  coronagraph.py  dft.py  fft.py  wavefront.py
prysm/x/: __init__.py  dm.py  fibers.py  pdi.py  polarization.py  psi.py  shack_hartmann.py  shackhartmann.py  sri.py  test_polarization.py
prysm/zernike/: __init__.py  analysis.py  calculation.py  conventions.py
sample_files/: valid_codev_int_file.int  valid_sample_trioptics_mtf.mht
tests/: .pydocstyle  __init__.py  test_bayer.py  test_colorimetry.py  test_config.py  test_convolution.py  test_coordinates.py  test_degredations.py  test_detector.py  test_e2e.py  test_fringezernike.py  test_fttools.py  test_geometry.py  test_interferogram.py  test_io.py  test_jacobi.py  test_mathops.py  test_mtf_utils.py  test_no_direct_numpy_scipy.py  test_objects.py  test_optym_activation.py  test_otf.py  test_physics.py  test_plotting.py  test_polynomials.py  test_propagation.py  test_psf.py  test_pupil.py  test_qpoly.py  test_raytracing_raygen.py  test_raytracing_status.py  test_raytracing_surfaces.py  test_refactive.py  test_refractive.py  test_richdata.py  test_samplefiles.py  test_segmented.py  test_seidel.py  test_thinfilm.py  test_thinlens.py  (+4 more)
tests/config/: __init__.py  test_config.py  test_config_precision_propagation.py
tests/io_files/: invalid_sample_oceanoptics.txt  valid_sample_MTFvFvF_Sag.txt  valid_sample_oceanoptics.txt  valid_sample_trioptics_mtf_vs_field.mht
tests/tests_bugs/: test_util_bugs.py
tests/x/: __init__.py  test_fibers.py  test_polarization.py
(+283 files in other folders)
