[metadata]
description-file = README.md
name = prysm
version = 0.14
author = brandon Dube
author-email = brandon@retrorefractions.com
home-page = prysm.readthedocs.io
description = prysm, a python optics module
long-description = file: README.md
license = MIT
license-file = LICENSE.md
platform = any
keywords =
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
include_package_date = true
packages = prysm
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires = setuptools >= 38.3.0
install_requires = numpy, scipy

[options.extra.requires]
cpu+ = numba
cuda = cupy
Mx = h5py
img = imageio
mtf+ = pandas
deconv = scikit-image
plotting = matplotlib
deluxe = numba, cupy, h5py, imageio, pandas, scikit-image

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
