[metadata]
name = prysm
author = Brandon Dube
author-email = brandon@retrorefractions.com
home-page = http://prysm.readthedocs.io
description = a python optics module
packages = prysm
long-description = file: README.md
license = MIT
platform = any
keywords =
    optics
    wavefront
    numerical propagation
    geometrical optics
    psf
    mtf
    interferogram
    pupil
    aberration
    imaging
    simulation
    slanted-edge
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = true
include_package_data = true
packages = prysm
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    numpy
    scipy

[options.extras_require]
cpu = numba
cuda = cupy
Mx = h5py
img = imageio
mtf = pandas
deconv = scikit-image
plotting = matplotlib
deluxe =
    numba
    cupy
    h5py
    imageio
    pandas
    scikit-image
    matplotlib
dev =
    numba
    h5py
    imageio
    pandas
    scikit-image
    matplotlib
    pytest
    sphinx
    nbsphinx

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
